chore[docker]: next.jsのDockerfileを追加

--- a/docker/frontend/next/Dockerfile
+++ b/docker/frontend/next/Dockerfile
@@ -2,12 +2,15 @@ FROM node:20-alpine
 
 WORKDIR /usr/src/client
 
-# COPY ./client/package.json ./client/yarn.lock ./
-COPY ./client ./
+RUN apk update && apk add --no-cache git
+
+COPY ./client/package.json ./client/yarn.lock ./
 
 RUN corepack enable
 RUN yarn install
 # RUN yarn build
+
+COPY ./client/src ./
 
 EXPOSE 3000
 
