chore: serverのsubmoduleのリンク先が間違えていたので修正

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/Lee266/op-ai-web-client/tree/develop
 [submodule "server"]
 	path = server
-	url = https://github.com/Lee266/op-ai-server
+	url = https://github.com/Lee266/op-ai-server/tree/develop
 [submodule "ai-lab"]
 	path = ai-lab
 	url = https://github.com/Lee266/op-ai-lab/tree/develop
