chore[docker]: golangのベストプラクティスに従って修正してみた

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     build:
       context: .
       dockerfile: docker/backend/golang/Dockerfile
+      target: dev
     container_name: ai_lab_golang
     env_file:
       - ./server/.env
