refactor[env]: 各PORTを追加

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,28 @@
+# --Frontend--
+
+FRONTEND_PORT=3000
+
+# --Backend--
+
+BACKEND_PORT=8002
+FLASK_PORT=5000
+
 # --Database--
 
-DATABASE_PASSWORD=password
-HOST_MACHINE_DATABASE_PORT=5432
-DATABASE_USER=postgres
 DATABASE_DB=postgres
+DATABASE_HOST=database
+DATABASE_PASSWORD=password
+DATABASE_URL=http://localhost:5432
+DATABASE_USER=postgres
+HOST_MACHINE_DATABASE_PORT=5432
+SSL_MODE=disable
+TIME_ZONE=Asia/Tokyo
+
+# --Database admin--
+
+DATABASE_ADMIN_PORT=8081
+
+# --PlantUML--
+
+PLANTUML_PORT=8082
+
