fix: dockerでnextjsを立てるときcanvasのbuildに失敗していたため、必要なライブラリを追加

--- a/docker/frontend/next/Dockerfile
+++ b/docker/frontend/next/Dockerfile
@@ -2,7 +2,12 @@ FROM node:20-alpine
 
 WORKDIR /usr/src/client
 
-RUN apk update && apk add --no-cache git
+RUN apk update && apk add --no-cache git build-base pkgconfig cairo pango libpng jpeg giflib librsvg \
+  libjpeg-turbo-dev \
+  giflib-dev \
+  libpng-dev \
+  cairo-dev \
+  pango-dev
 
 COPY ./client/package.json ./client/yarn.lock ./
 
